--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -247,6 +247,7 @@ SUBDIR += py-feedparser
 SUBDIR += py-furo
 SUBDIR += py-genshi
 SUBDIR += py-gi-docgen
+SUBDIR += py-griffe
 SUBDIR += py-hexdump
 SUBDIR += py-htmlmin2
 SUBDIR += py-interegular
@@ -273,6 +274,8 @@ SUBDIR += py-mkdocs-nature
 SUBDIR += py-mkdocs-redirects
 SUBDIR += py-mkdocs-rss-plugin
 SUBDIR += py-mkdocs-simple-hooks
+SUBDIR += py-mkdocstrings
+SUBDIR += py-mkdocstrings-python
 SUBDIR += py-myst-parser
 SUBDIR += py-openstep-plist
 SUBDIR += py-parso
@@ -284,6 +287,7 @@ SUBDIR += py-pygments-25
 SUBDIR += py-pyhamcrest
 SUBDIR += py-pyjade
 SUBDIR += py-pylons-sphinx-themes
+SUBDIR += py-pymdown-extensions
 SUBDIR += py-pypa-docs-theme
 SUBDIR += py-pyphen
 SUBDIR += py-pystemmer
