--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -259,6 +259,7 @@ SUBDIR += py-m2r
 SUBDIR += py-mako
 SUBDIR += py-markdown
 SUBDIR += py-markdown2
+SUBDIR += py-markdown-callouts
 SUBDIR += py-markdown-it-py
 SUBDIR += py-markupsafe
 SUBDIR += py-mdit-py-plugins
@@ -275,6 +276,7 @@ SUBDIR += py-mkdocs-redirects
 SUBDIR += py-mkdocs-rss-plugin
 SUBDIR += py-mkdocs-simple-hooks
 SUBDIR += py-mkdocstrings
+SUBDIR += py-mkdocstrings-crystal
 SUBDIR += py-mkdocstrings-python
 SUBDIR += py-myst-parser
 SUBDIR += py-openstep-plist
