--- a/www/xsp/Makefile
+++ b/www/xsp/Makefile
@@ -1,5 +1,6 @@
 PORTNAME=	xsp
-PORTVERSION=	4.5
+PORTVERSION=	4.7.1
+PORTREVISION=	1
 CATEGORIES=	www
 MASTER_SITES=	http://download.mono-project.com/sources/${PORTNAME}/
 
@@ -13,10 +14,13 @@ LICENSE_FILE=	${WRKSRC}/COPYING
 MAKE_JOBS_UNSAFE=	yes
 
 USES=		gmake libtool mono pathfix pkgconfig sqlite
-GNU_CONFIGURE=	yes
-CONFIGURE_ENV=	ac_cv_path_GMCS=${LOCALBASE}/bin/mcs
+USE_LDCONFIG=	yes
 
-PLIST_SUB+=	PORTVERSION=${PORTVERSION}
+GNU_CONFIGURE=	yes
+GNU_CONFIGURE_MANPREFIX=${PREFIX}/share
+CONFIGURE_ENV=	ac_cv_path_GMCS=${LOCALBASE}/bin/mcs
+MAKE_ENV=	MONO_REGISTRY_PATH=/tmp/registry
+PLIST_SUB=	PORTVERSION=${PORTVERSION}
 
 pre-install:
 	${MKDIR} ${XSP_DOCROOT}
