--- a/archivers/pear-Horde_Compress_Fast/Makefile
+++ b/archivers/pear-Horde_Compress_Fast/Makefile
@@ -6,7 +6,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Horde Fast Compression Library
 WWW=		https://pear.horde.org
 
-LICENSE=	lpgl2.1
+LICENSE=	lgpl2.1
 
 USES=		horde cpe
 USE_HORDE_RUN=	Horde_Exception
