--- a/security/pear-Horde_Group/Makefile
+++ b/security/pear-Horde_Group/Makefile
@@ -6,6 +6,8 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Horde User Groups System
 WWW=		https://pear.horde.org
 
+LICENSE=	lgpl2.1
+
 USES=	horde cpe
 USE_HORDE_RUN=	Horde_Exception \
 		Horde_Util
