--- a/x11-fonts/py-compreffor/Makefile
+++ b/x11-fonts/py-compreffor/Makefile
@@ -1,18 +1,21 @@
 PORTNAME=	compreffor
-PORTVERSION=	0.4.6
+DISTVERSION=	0.5.4
 CATEGORIES=	x11-fonts python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
 MAINTAINER=	ports@MidnightBSD.org
-COMMENT=	CFF subroutinizer for fontTools
+COMMENT=	CFF table subroutinizer for FontTools
+WWW=		https://github.com/googlefonts/compreffor
 
 LICENSE=	apache2
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-USES=		compiler:c++11-lang python zip
-USE_PYTHON=	autoplist concurrent distutils
+BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}setuptools-scm>=0:devel/py-setuptools-scm@${PY_FLAVOR} \
+		${PYTHON_PKGNAMEPREFIX}setuptools_git_ls_files>=0:devel/py-setuptools_git_ls_files@${PY_FLAVOR}
+RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}fonttools>=4:print/py-fonttools@${PY_FLAVOR}
 
-RUN_DEPENDS+=	${PYTHON_PKGNAMEPREFIX}fonttools>=3.1:print/py-fonttools@${PY_FLAVOR}
+USES=		compiler:c++11-lang python
+USE_PYTHON=	autoplist concurrent distutils
 
 .include <bsd.port.mk>
