--- a/x11-fonts/py-fontMath/Makefile
+++ b/x11-fonts/py-fontMath/Makefile
@@ -1,16 +1,17 @@
 PORTNAME=	fontMath
-PORTVERSION=	0.4.9
-PORTREVISION=	1
+PORTVERSION=	0.9.3
 CATEGORIES=	x11-fonts python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Set of objects for performing math operations on font data
+WWW=		https://github.com/robotools/fontMath
 
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/License.txt
 
+BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}setuptools-scm>=0:devel/py-setuptools-scm@${PY_FLAVOR}
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}fonttools>=3.32.0:print/py-fonttools@${PY_FLAVOR}
 
 USES=		python zip
