--- a/dns/libnspsl/Makefile
+++ b/dns/libnspsl/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	libnspsl
-PORTVERSION=	0.1.6
+PORTVERSION=	0.1.7
 CATEGORIES=	dns
 MASTER_SITES=	https://download.netsurf-browser.org/libs/releases/
 EXTRACT_SUFX=	-src.tar.gz
@@ -17,7 +17,7 @@ BUILD_DEPENDS=	netsurf-buildsystem>=1.5:devel/netsurf-buildsystem
 
 USES=		gmake
 USE_LDCONFIG=	yes
-MAKE_ENV+=	COMPONENT_TYPE="lib-shared"
+MAKE_ENV+=	BUILD_CC="${CC}" COMPONENT_TYPE="lib-shared"
 PLIST_SUB+=	VERSION=${PORTVERSION}
 
 post-install:
