--- a/www/mediawiki142/Makefile
+++ b/www/mediawiki142/Makefile
@@ -1,8 +1,8 @@
 PORTNAME=	mediawiki
-PORTVERSION=	1.38.5
+PORTVERSION=	1.42.3
 CATEGORIES=	www
 MASTER_SITES=	https://releases.wikimedia.org/mediawiki/${PORTVERSION:R}/
-PKGNAMESUFFIX=	138${PHP_PKGNAMESUFFIX}
+PKGNAMESUFFIX=	142${PHP_PKGNAMESUFFIX}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Wiki engine used by Wikipedia
@@ -10,16 +10,13 @@ WWW=		https://www.mediawiki.org/
 
 LICENSE=	gpl2
 
-CONFLICTS=	mediawiki13[5-7] mediawiki139
+CONFLICTS=	mediawiki139 mediawiki140 mediawiki141
 
 USES=		cpe php:flavors shebangfix
-SHEBANG_FILES=	maintenance/dev/*.sh \
-		maintenance/storage/make-blobs
-SHEBANG_LANG=	hhvm
-hhvm_OLD_CMD=	/usr/bin/hhvm
-hhvm_CMD=	${LOCALBASE}/bin/hhvm # not installed by anything yet
-USE_PHP=	ctype dom fileinfo filter hash iconv intl json mbstring openssl \
-		pcre readline session xml xmlreader zlib
+SHEBANG_FILES=	maintenance/storage/make-blobs
+
+USE_PHP=	ctype dom fileinfo filter iconv intl mbstring \
+		readline session xml xmlreader zlib
 MEDIAWIKIDIR?=	www/mediawiki
 
 NO_BUILD=	yes
