--- a/graphics/libnsbmp/Makefile
+++ b/graphics/libnsbmp/Makefile
@@ -1,13 +1,12 @@
-# Created by: Olivier Duchateau
-
 PORTNAME=	libnsbmp
-PORTVERSION=	0.1.6
+PORTVERSION=	0.1.7
 CATEGORIES=	graphics
 MASTER_SITES=	http://download.netsurf-browser.org/libs/releases/
 EXTRACT_SUFX=	-src.tar.gz
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	NetSurf BMP decoder
+WWW=		https://www.netsurf-browser.org/projects/libnsbmp/
 
 LICENSE=	mit
 
@@ -15,10 +14,11 @@ FAKE_OPTS=	trueprefix
 
 BUILD_DEPENDS=	netsurf-buildsystem>=1.5:devel/netsurf-buildsystem
 
-USES=		gmake
+USES=		cpe gmake
+CPE_VENDOR=	netsurf-browser
 USE_LDCONFIG=	yes
 
-MAKE_ENV=	COMPONENT_TYPE="lib-shared"
+MAKE_ENV=	BUILD_CC="${CC}" COMPONENT_TYPE="lib-shared"
 
 PLIST_SUB=	VERSION=${PORTVERSION}
 
