--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -270,6 +270,7 @@ SUBDIR += py-mkdocs
 SUBDIR += py-mkdocs-autorefs
 SUBDIR += py-mkdocs-get-deps
 SUBDIR += py-mkdocs-git-revision-date-localized-plugin
+SUBDIR += py-mkdocs-material
 SUBDIR += py-mkdocs-minify-plugin
 SUBDIR += py-mkdocs-nature
 SUBDIR += py-mkdocs-redirects
@@ -280,6 +281,7 @@ SUBDIR += py-mkdocstrings-crystal
 SUBDIR += py-mkdocstrings-python
 SUBDIR += py-myst-parser
 SUBDIR += py-openstep-plist
+SUBDIR += py-paginate
 SUBDIR += py-parso
 SUBDIR += py-pyaml
 SUBDIR += py-pybtex
