--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1033,6 +1033,8 @@ SUBDIR += py-grpcio-status
 SUBDIR += py-grpcio-tools
 SUBDIR += py-gyp
 SUBDIR += py-hatch-fancy-pypi-readme
+SUBDIR += py-hatch-nodejs-version
+SUBDIR += py-hatch-requirements-txt
 SUBDIR += py-hatch-vcs
 SUBDIR += py-hatchling
 SUBDIR += py-hgtools
