--- a/shells/Makefile
+++ b/shells/Makefile
@@ -34,6 +34,7 @@ SUBDIR += zsh
 SUBDIR += zsh-antigen
 SUBDIR += zsh-autosuggestions
 SUBDIR += zsh-completions
+SUBDIR += zsh-fast-syntax-highlighting
 SUBDIR += zsh-navigation-tools
 SUBDIR += zsh-syntax-highlighting
 
