--- a/shells/nushell/Makefile
+++ b/shells/nushell/Makefile
@@ -601,7 +601,7 @@ CARGO_CRATES=	Inflector-0.11.4 \
 OPENSSLINC=	/usr/include
 OPENSSLLIB=	/usr/lib
 
-PLIST_FILES=	bin/nu
+PLIST_FILES=	@shell bin/nu
 
 OPTIONS_DEFINE=		DATAFRAME
 
