filesystems/chironfs: fix build

--- a/filesystems/chironfs/Makefile
+++ b/filesystems/chironfs/Makefile
@@ -14,6 +14,7 @@ LICENSE_FILE=	${WRKSRC}/doc/copyright
 USES=		fuse localbase:ldflags
 GNU_CONFIGURE=	yes
 GNU_CONFIGURE_MANPREFIX=${PREFIX}/share
+CONFIGURE_TARGET=	${ARCH}-portbld-freebsd12.4
 
 PLIST_FILES=	bin/chironfs bin/chirctl share/man/man8/chironfs.8.gz
 PORTDOCS=	*
