--- a/devel/Makefile
+++ b/devel/Makefile
@@ -834,6 +834,7 @@ SUBDIR += pear-Horde_History
 SUBDIR += pear-Horde_Icalendar
 SUBDIR += pear-Horde_Injector
 SUBDIR += pear-Horde_Lock
+SUBDIR += pear-Horde_LoginTasks
 SUBDIR += pear-Horde_Nls
 SUBDIR += pear-Horde_Role
 SUBDIR += pear-Horde_Serialize
