--- a/mail/Makefile
+++ b/mail/Makefile
@@ -99,6 +99,7 @@ SUBDIR += pear-Horde_Imap_Client
 SUBDIR += pear-Horde_Mail
 SUBDIR += pear-Horde_Mapi
 SUBDIR += pear-Horde_Mime
+SUBDIR += pear-Horde_Mime_Viewer
 SUBDIR += pear-Horde_Smtp
 SUBDIR += pear-MIME_Type
 SUBDIR += php81-imap
