--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -271,6 +271,7 @@ SUBDIR += py-mkdocs-autorefs
 SUBDIR += py-mkdocs-get-deps
 SUBDIR += py-mkdocs-git-revision-date-localized-plugin
 SUBDIR += py-mkdocs-material
+SUBDIR += py-mkdocs-material-extensions
 SUBDIR += py-mkdocs-minify-plugin
 SUBDIR += py-mkdocs-nature
 SUBDIR += py-mkdocs-redirects
