add mysql 8.4.  (in progress) update libunwind to 2024

--- a/databases/Makefile
+++ b/databases/Makefile
@@ -46,6 +46,8 @@ SUBDIR += mongodb50
 SUBDIR += mysql-connector-java51
 SUBDIR += mysql80-client
 SUBDIR += mysql80-server
+SUBDIR += mysql84-client
+SUBDIR += mysql84-server
 SUBDIR += mysqltuner
 SUBDIR += ntdb
 SUBDIR += oracle8-client
