--- a/devel/Makefile
+++ b/devel/Makefile
@@ -287,6 +287,7 @@ SUBDIR += libuv
 SUBDIR += libvirt
 SUBDIR += libvirt-glib
 SUBDIR += libvolume_id
+SUBDIR += libvterm
 SUBDIR += libzookeeper
 SUBDIR += libzvbi
 SUBDIR += linux-c7-dbus-glib
