neovim gtk and qt

--- a/editors/Makefile
+++ b/editors/Makefile
@@ -22,6 +22,9 @@ SUBDIR += linux-wps-office
 SUBDIR += mg
 SUBDIR += mousepad
 SUBDIR += nano
+SUBDIR += neovim
+SUBDIR += neovim-gtk
+SUBDIR += neovim-qt
 SUBDIR += nvi-devel
 SUBDIR += openoffice-4
 SUBDIR += pico-alpine
