--- a/print/Makefile
+++ b/print/Makefile
@@ -38,6 +38,9 @@ SUBDIR += libspectre
 SUBDIR += linux-c7-cups-libs
 SUBDIR += linux-c7-freetype
 SUBDIR += linux-c7-harfbuzz
+SUBDIR += linux-rl9-cups-libs
+SUBDIR += linux-rl9-freetype
+SUBDIR += linux-rl9-harfbuzz
 SUBDIR += mp-letter
 SUBDIR += pdflib
 SUBDIR += psutils
