--- a/www/Makefile
+++ b/www/Makefile
@@ -42,6 +42,9 @@ SUBDIR += links1
 SUBDIR += linux-c7-qtwebkit
 SUBDIR += linux-libgtkembedmoz
 SUBDIR += linux-opera
+SUBDIR += linux-rl9-libnghttp2
+SUBDIR += linux-rl9-qt5-qtwebchannel
+SUBDIR += linux-rl9-qt5-qtwebsockets
 SUBDIR += lynx
 SUBDIR += man2web
 SUBDIR += mathjax
