--- a/net/Makefile
+++ b/net/Makefile
@@ -115,6 +115,8 @@ SUBDIR += openldap24-client
 SUBDIR += openldap24-server
 SUBDIR += openldap25-client
 SUBDIR += openldap25-server
+SUBDIR += openldap26-client
+SUBDIR += openldap26-server
 SUBDIR += openmpi
 SUBDIR += openmpi4
 SUBDIR += openntpd
