--- a/textproc/linux-rl9-expat/Makefile
+++ b/textproc/linux-rl9-expat/Makefile
@@ -8,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	XML 1.0 parser written in C (Rocky Linux ${LINUX_DIST_VER})
 WWW=		https://github.com/libexpat/libexpat
 
-LICENSE=	MIT
+LICENSE=	mit
 
 USES=		cpe linux:rl9
 CPE_VENDOR=	${CPE_PRODUCT}_project
