--- a/accessibility/linux-rl9-at-spi2-core/Makefile
+++ b/accessibility/linux-rl9-at-spi2-core/Makefile
@@ -8,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Assistive technology service provider interface (Rocky Linux ${LINUX_DIST_VER})
 WWW=		https://gitlab.gnome.org/GNOME/at-spi2-core
 
-LICENSE=	LGPL20+
+LICENSE=	lgpl+
 
 RUN_DEPENDS=	at-spi2-core>=2.28.0:accessibility/at-spi2-core
 
