--- a/databases/mysql84-client/Makefile
+++ b/databases/mysql84-client/Makefile
@@ -36,10 +36,10 @@ OPTIONS_GROUP_PLUGINS=	SASLCLIENT
 SASLCLIENT_DESC=	SASL client plugin module
 SASLCLIENT_CMAKE_BOOL=	WITH_AUTHENTICATION_LDAP
 SASLCLIENT_LIB_DEPENDS=	libsasl2.so:security/cyrus-sasl2
-#SASLCLIENT_USES=		ldap
+SASLCLIENT_USES=		ldap
 SASLCLIENT_USE=		OPENLDAP=yes LDAP=yes
 
-OPTIONS_DEFAULT+=	SASLCLIENT
+#OPTIONS_DEFAULT+=	SASLCLIENT
 OPTIONS_SUB=	yes
 
 post-patch:
