databases/mysql90-client: broken for now

--- a/databases/mysql90-client/Makefile
+++ b/databases/mysql90-client/Makefile
@@ -39,7 +39,7 @@ SASLCLIENT_LIB_DEPENDS=	libsasl2.so:security/cyrus-sasl2
 #SASLCLIENT_USES=		ldap
 SASLCLIENT_USE=		OPENLDAP=yes LDAP=yes
 
-OPTIONS_DEFAULT+=	SASLCLIENT
+#OPTIONS_DEFAULT+=	SASLCLIENT
 OPTIONS_SUB=	yes
 
 post-patch:
