devel/ptlib: broke

--- a/devel/ptlib/Makefile
+++ b/devel/ptlib/Makefile
@@ -40,8 +40,6 @@ CONFIGURE_ENV+=	OPENSSL_CFLAGS="-I${OPENSSLINC}" \
 		OPENSSL_LIBS="-L${OPENSSLLIB} -lssl" \
 		OSRELEASE=${OSRELEASE}
 
-DEBUG_DESC=	Install debug library
-
 .include <bsd.mport.options.mk>
 
 .if ${OSVERSION} > 300000
@@ -62,7 +60,7 @@ PLIST_SUB+=	PORTVERSION=${PORTVERSION} \
 		PVERSION_MAJOR=${PVERSION_MAJOR} \
 		PVERSION_MINOR=${PVERSION_MINOR}
 
-OPTIONS_DEFINE=	DEBUG ODBC ALSA JABBER V4L SDL LDAP PULSEAUDIO
+OPTIONS_DEFINE=	ODBC ALSA JABBER V4L SDL LDAP PULSEAUDIO
 OPTIONS_DEFAULT=SDL V4L JABBER
 OPTIONS_SUB=	yes
 
@@ -72,7 +70,6 @@ PVERSION_MINOR=	${PORTVERSION:C/.[0-9]+$//g}
 
 ALSA_LIB_DEPENDS=	libasound.so:audio/alsa-lib
 ALSA_CONFIGURE_ENABLE=alsa
-DEBUG_ALL_TARGET=	debugshared
 JABBER_CONFIGURE_ON=--enable-jabber
 JABBER_VARS=	PTLIB_VIDEO=1
 LDAP_USES=	ldap
@@ -128,9 +125,5 @@ post-install:
 		${STAGEDIR}${PREFIX}/lib/ptlib-${PORTVERSION}/devices/*/*.so
 	@${STRIP_CMD} ${STAGEDIR}${PREFIX}/lib/libpt.so.${PORTVERSION}
 	@${STRIP_CMD} ${STAGEDIR}${PREFIX}/lib/ptlib-${PORTVERSION}/devices/*/*.so
-
-post-install-DEBUG-on:
-	${LN} -sf libpt_d.so.${PORTVERSION} ${FAKE_DESTDIR}${PREFIX}/lib/libpt_d.so.${PVERSION_MAJOR}
-	${LN} -sf libpt_d.so.${PORTVERSION} ${FAKE_DESTDIR}${PREFIX}/lib/libpt_d.so.${PVERSION_MINOR}
 
 .include <bsd.port.post.mk>
