graphics/py-graphviz: magus

--- a/graphics/py-graphviz/Makefile
+++ b/graphics/py-graphviz/Makefile
@@ -13,15 +13,16 @@ LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/LICENSE.txt
 
 RUN_DEPENDS=	dot:graphics/graphviz
-TEST_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pytest-cov>=0:devel/py-pytest-cov@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}pytest-mock>=0:devel/py-pytest-mock@${PY_FLAVOR}
+#TEST_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pytest-cov>=0:devel/py-pytest-cov@${PY_FLAVOR} \
+#		${PYTHON_PKGNAMEPREFIX}pytest-mock>=0:devel/py-pytest-mock@${PY_FLAVOR}
 
 USES=		cpe python zip
 USE_PYTHON=	autoplist concurrent distutils
 
 NO_ARCH=	yes
+NO_TEST=	yes
 
-do-test:
-	@cd ${WRKSRC} && ${PYTHON_CMD} run-tests.py
+#do-test:
+#	@cd ${WRKSRC} && ${PYTHON_CMD} run-tests.py
 
 .include <bsd.port.mk>
